Renames sdk dependency and updates imports

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 borsh = {version = "1.2.0"}
 borsh-derive= {version = "1.2.0"}
-light_sdk = {git = "https://github.com/anoma/namada", branch = "adrian/light-sdk"}
+namada_light_sdk = {git = "https://github.com/anoma/namada", branch = "adrian/light-sdk"}
 
 [build-dependencies]
 cbindgen = "0.26.0"
